# midiPlayer

./: android_minimal_template.txt  gradle.properties  settings.gradle.kts  tombstone_31
app/: build.gradle.kts
app/src/androidTest/java/com/example/midiPlayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/midiPlayer/: AppSettings.java  AudioPlaybackService.kt  HardButtonReceiver.java  MainActivity.kt  OpenFileDialog.java  Player.java  PlayerService.java
app/src/main/res/drawable/: ic_music_playing.xml
app/src/main/res/layout/: item_playlist.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/midiPlayer/: ExampleUnitTest.kt
